# django-lms

./: .pdm.toml  LICENSE  doc.http  pyproject.toml
app/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
